提交部分页面

--- a/public/iconfont/demo_fontclass.html
+++ b/public/iconfont/demo_fontclass.html
@@ -84,6 +84,12 @@
                     <div class="fontclass">.icon-gx_daoChu</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont icon-gx_yonghu"></i>
+                    <div class="name">gx_yonghu</div>
+                    <div class="fontclass">.icon-gx_yonghu</div>
+                </li>
+            
         </ul>
 
         <h2 id="font-class-">font-class引用</h2>
