--- a/public/iconfont/demo_symbol.html
+++ b/public/iconfont/demo_symbol.html
@@ -123,6 +123,14 @@
                     <div class="fontclass">#icon-gx_daoChu</div>
                 </li>
             
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-gx_yonghu"></use>
+                    </svg>
+                    <div class="name">gx_yonghu</div>
+                    <div class="fontclass">#icon-gx_yonghu</div>
+                </li>
+            
         </ul>
 
 
