--- a/public/iconfont/demo_unicode.html
+++ b/public/iconfont/demo_unicode.html
@@ -104,6 +104,12 @@
                     <div class="code">&amp;#xe65d;</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont">&#xe65e;</i>
+                    <div class="name">gx_yonghu</div>
+                    <div class="code">&amp;#xe65e;</div>
+                </li>
+            
         </ul>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
